--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Bienvenido a mi repositorio</h1>
         <p id="message">Haz clic en el botón para cambiar este mensaje.</p>
-        <p id="extraMessage">Este mensaje es independiente de prueba para la rama HTML</p>
+        <p id="extraMessage">Cambios PIPELINE verifique cambios</p>
         <button id="actionButton">Haz clic aquí</button>
     </div>
     <script src="script.js"></script>
